<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.agentzengyu.superdownloader.activity.MainActivity">

    <Button
        android:id="@+id/btnNew"
        android:layout_marginTop="60dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/lightskyblue"
        android:text="@string/main_button_new"/>

    <Button
        android:id="@+id/btnCurrent"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/royalblue"
        android:text="@string/main_button_current"/>

    <Button
        android:id="@+id/btnHistory"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/dimgrey"
        android:text="@string/main_button_history"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_marginTop="150dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/orangered"
        android:text="@string/main_button_exit"/>

</LinearLayout>
