<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightcyan"
    android:orientation="vertical"
    tools:context="com.example.agentzengyu.superdownloader.fragment.NewTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/black">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:background="@color/lightgray"
            android:paddingBottom="2dp"
            android:paddingTop="2dp">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:gravity="center"
                android:text="←" />

            <EditText
                android:id="@+id/etWebsite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:layout_marginRight="5dp"
                android:layout_weight="6" />

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:gravity="center"
                android:text="→"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black">

        </LinearLayout>

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="74"></WebView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/black">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <EditText
                android:id="@+id/etUrl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:singleLine="true"
                android:hint="@string/new_hint_url" />

            <Button
                android:id="@+id/btnPasteUrl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/new_button_url" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/black">

        </LinearLayout>

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="8"
            android:text="@string/new_button_download"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>
